# defenderattach

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  compose.yaml  milestones.html  pyproject.toml  requirements-streamlit.txt  requirements.txt  start-dashboard.cmd  start-service-attach.cmd  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: pages-preview.yml  pages.yml  static-webapp-check.yml
assets/: styles.css
docs/: defender_for_cloud_dashboard (2).html
js/: app-nav.js  sl-export.js
previews/pr-2/css/: app.css
previews/pr-2/js/: pptx-acr.js  theme.js
previews/pr-3/: README.md  index.html
previews/pr-3/css/: dashboard.css  milestone.css  theme.css
previews/pr-3/js/: csv-export.js  pptx-milestones.js  sl-export.js  sl-mapping.js
previews/pr-4/js/: acr-model.js  app-nav.js  (+1 more)
previews/pr-6/: index.html
previews/pr-8/: README.md  acr.html  milestones.html
scripts/: build_static_webapp.py  gen_sl_golden.py  smoke_test.py
src/defender_acr_dashboard/: __init__.py  analytics.py  app.py  charts.py  config.py  dashboard_model.py  data.py  excel_io.py  exports.py  milestone_analysis.py  milestone_export.py  static_dashboard.py
tests/: test_engine.py  test_parser.py
web-app/: README.md  acr.html  index.html  service-attach.html
web-app/css/: app.css  milestone.css  service-attach.css  theme.css
web-app/js/: acr-model.js  app-nav.js  milestone-app.js  milestone-model.js  milestone-view.js  pptx-acr.js  pptx-sl.js  sl-app.js  sl-engine.js  sl-mapping.js  sl-view.js
web-app/tests/: regression.cjs
(+13 files in other folders)
